--- a/exercises/hello-world-website/better-website/index.html
+++ b/exercises/hello-world-website/better-website/index.html
@@ -7,6 +7,8 @@
     <title>Better Website</title>
 </head>
 <body>
-    
+
+    <div id="messageDiv">Hello!</div>
+    <script src="scripts/greetings.js"></script>
 </body>
 </html>
